increase z-index of popcal so it goes on top of modal. fixes #35

--- a/scss/emberui/eui-popcal.scss
+++ b/scss/emberui/eui-popcal.scss
@@ -3,7 +3,7 @@
   position: fixed;
   overflow: visible !important;
   outline: none;
-  z-index: 10000;
+  z-index: 1000001;
   opacity: 0.01;
 
   .eui-calendar {
